--- a/gameengine-editor/src/main/webapp/css/style.less
+++ b/gameengine-editor/src/main/webapp/css/style.less
@@ -203,11 +203,13 @@ button:hover {
   background-color: white;
   width: 100%;
   border: 2px solid @backgroundcolor;
+  text-align: center;
 
   label {
     display: block;
     background-color: #bdc3c7;
     color: black;
+    text-align: left;
   }
 
   input[type=text], input[type=color], input[type=range], select, textarea {
