--- a/gameengine-editor/src/main/webapp/css/style.less
+++ b/gameengine-editor/src/main/webapp/css/style.less
@@ -135,7 +135,7 @@ button:hover {
     background-color: @objectbrowsertitle;
   }
 
-  .propertyEditor {
+  .propertyEditor, textfield-propertyeditor {
     padding: 0.1em;
     display: flex;
     flex-flow: row;
