--- a/gameengine-editor/src/main/webapp/css/style.css
+++ b/gameengine-editor/src/main/webapp/css/style.css
@@ -292,13 +292,15 @@ button:hover {
 .propertyEditor .separator {
   background-color: #e74c3c;
 }
-.propertyEditor .propertyEditor {
+.propertyEditor .propertyEditor,
+.propertyEditor textfield-propertyeditor {
   padding: 0.1em;
   display: flex;
   flex-flow: row;
   overflow: visible;
 }
-.propertyEditor .propertyEditor label {
+.propertyEditor .propertyEditor label,
+.propertyEditor textfield-propertyeditor label {
   font-size: small;
   padding-right: 0.2em;
   align-self: center;
@@ -308,13 +310,16 @@ button:hover {
   padding-left: 0.2em;
   flex-shrink: 5;
 }
-.propertyEditor .propertyEditor input[type=text] {
+.propertyEditor .propertyEditor input[type=text],
+.propertyEditor textfield-propertyeditor input[type=text] {
   flex-grow: 10;
 }
-.propertyEditor .propertyEditor input[type=color] {
+.propertyEditor .propertyEditor input[type=color],
+.propertyEditor textfield-propertyeditor input[type=color] {
   flex-grow: 10;
 }
-.propertyEditor .propertyEditor select {
+.propertyEditor .propertyEditor select,
+.propertyEditor textfield-propertyeditor select {
   flex-grow: 10;
 }
 .objectTree {
