--- a/gameengine-editor/src/main/webapp/css/style.less
+++ b/gameengine-editor/src/main/webapp/css/style.less
@@ -135,7 +135,13 @@ button:hover {
     background-color: @objectbrowsertitle;
   }
 
-  .propertyEditor, textfield-propertyeditor {
+  .propertyEditor,
+  textfield-propertyeditor,
+  textarea-propertyeditor,
+  checkbox-propertyeditor,
+  animation-propertyeditor,
+  color-propertyeditor,
+  twofield-propertyeditor {
     padding: 0.1em;
     display: flex;
     flex-flow: row;
