--- a/gameengine-editor/src/main/webapp/css/style.less
+++ b/gameengine-editor/src/main/webapp/css/style.less
@@ -137,7 +137,9 @@ button:hover {
   checkbox-propertyeditor,
   animation-propertyeditor,
   color-propertyeditor,
-  twofield-propertyeditor {
+  twofield-propertyeditor,
+  select-propertyeditor,
+  font-propertyeditor{
     padding: 0.1em;
     display: flex;
     flex-flow: row;
