Removed dead code and optimized custom component api.

--- a/gameengine-editor/src/main/webapp/css/style.less
+++ b/gameengine-editor/src/main/webapp/css/style.less
@@ -132,14 +132,14 @@ button:hover {
   overflow-x: hidden;
 
   .propertyEditor,
-  textfield-propertyeditor,
-  textarea-propertyeditor,
-  checkbox-propertyeditor,
-  animation-propertyeditor,
-  color-propertyeditor,
-  twofield-propertyeditor,
-  select-propertyeditor,
-  font-propertyeditor{
+  gameeditor-textfieldpropertyeditor,
+  gameeditor-textareapropertyeditor,
+  gameeditor-checkboxpropertyeditor,
+  gameeditor-animationpropertyeditor,
+  gameeditor-colorpropertyeditor,
+  gameeditor-twofieldpropertyeditor,
+  gameeditor-selectpropertyeditor,
+  gameeditor-fontpropertyeditor{
     padding: 0.1em;
     display: flex;
     flex-flow: row;
@@ -199,4 +199,9 @@ button:hover {
     z-index: 99;
     background-color: white;
   }
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
 }
