--- a/gameengine-editor/src/main/webapp/css/style.css
+++ b/gameengine-editor/src/main/webapp/css/style.css
@@ -290,28 +290,28 @@ button:hover {
   overflow-x: hidden;
 }
 .propertyEditor .propertyEditor,
-.propertyEditor textfield-propertyeditor,
-.propertyEditor textarea-propertyeditor,
-.propertyEditor checkbox-propertyeditor,
-.propertyEditor animation-propertyeditor,
-.propertyEditor color-propertyeditor,
-.propertyEditor twofield-propertyeditor,
-.propertyEditor select-propertyeditor,
-.propertyEditor font-propertyeditor {
+.propertyEditor gameeditor-textfieldpropertyeditor,
+.propertyEditor gameeditor-textareapropertyeditor,
+.propertyEditor gameeditor-checkboxpropertyeditor,
+.propertyEditor gameeditor-animationpropertyeditor,
+.propertyEditor gameeditor-colorpropertyeditor,
+.propertyEditor gameeditor-twofieldpropertyeditor,
+.propertyEditor gameeditor-selectpropertyeditor,
+.propertyEditor gameeditor-fontpropertyeditor {
   padding: 0.1em;
   display: flex;
   flex-flow: row;
   overflow: visible;
 }
 .propertyEditor .propertyEditor label,
-.propertyEditor textfield-propertyeditor label,
-.propertyEditor textarea-propertyeditor label,
-.propertyEditor checkbox-propertyeditor label,
-.propertyEditor animation-propertyeditor label,
-.propertyEditor color-propertyeditor label,
-.propertyEditor twofield-propertyeditor label,
-.propertyEditor select-propertyeditor label,
-.propertyEditor font-propertyeditor label {
+.propertyEditor gameeditor-textfieldpropertyeditor label,
+.propertyEditor gameeditor-textareapropertyeditor label,
+.propertyEditor gameeditor-checkboxpropertyeditor label,
+.propertyEditor gameeditor-animationpropertyeditor label,
+.propertyEditor gameeditor-colorpropertyeditor label,
+.propertyEditor gameeditor-twofieldpropertyeditor label,
+.propertyEditor gameeditor-selectpropertyeditor label,
+.propertyEditor gameeditor-fontpropertyeditor label {
   font-size: small;
   padding-right: 0.2em;
   align-self: center;
@@ -322,36 +322,36 @@ button:hover {
   flex-shrink: 5;
 }
 .propertyEditor .propertyEditor input[type=text],
-.propertyEditor textfield-propertyeditor input[type=text],
-.propertyEditor textarea-propertyeditor input[type=text],
-.propertyEditor checkbox-propertyeditor input[type=text],
-.propertyEditor animation-propertyeditor input[type=text],
-.propertyEditor color-propertyeditor input[type=text],
-.propertyEditor twofield-propertyeditor input[type=text],
-.propertyEditor select-propertyeditor input[type=text],
-.propertyEditor font-propertyeditor input[type=text] {
+.propertyEditor gameeditor-textfieldpropertyeditor input[type=text],
+.propertyEditor gameeditor-textareapropertyeditor input[type=text],
+.propertyEditor gameeditor-checkboxpropertyeditor input[type=text],
+.propertyEditor gameeditor-animationpropertyeditor input[type=text],
+.propertyEditor gameeditor-colorpropertyeditor input[type=text],
+.propertyEditor gameeditor-twofieldpropertyeditor input[type=text],
+.propertyEditor gameeditor-selectpropertyeditor input[type=text],
+.propertyEditor gameeditor-fontpropertyeditor input[type=text] {
   flex-grow: 10;
 }
 .propertyEditor .propertyEditor input[type=color],
-.propertyEditor textfield-propertyeditor input[type=color],
-.propertyEditor textarea-propertyeditor input[type=color],
-.propertyEditor checkbox-propertyeditor input[type=color],
-.propertyEditor animation-propertyeditor input[type=color],
-.propertyEditor color-propertyeditor input[type=color],
-.propertyEditor twofield-propertyeditor input[type=color],
-.propertyEditor select-propertyeditor input[type=color],
-.propertyEditor font-propertyeditor input[type=color] {
+.propertyEditor gameeditor-textfieldpropertyeditor input[type=color],
+.propertyEditor gameeditor-textareapropertyeditor input[type=color],
+.propertyEditor gameeditor-checkboxpropertyeditor input[type=color],
+.propertyEditor gameeditor-animationpropertyeditor input[type=color],
+.propertyEditor gameeditor-colorpropertyeditor input[type=color],
+.propertyEditor gameeditor-twofieldpropertyeditor input[type=color],
+.propertyEditor gameeditor-selectpropertyeditor input[type=color],
+.propertyEditor gameeditor-fontpropertyeditor input[type=color] {
   flex-grow: 10;
 }
 .propertyEditor .propertyEditor select,
-.propertyEditor textfield-propertyeditor select,
-.propertyEditor textarea-propertyeditor select,
-.propertyEditor checkbox-propertyeditor select,
-.propertyEditor animation-propertyeditor select,
-.propertyEditor color-propertyeditor select,
-.propertyEditor twofield-propertyeditor select,
-.propertyEditor select-propertyeditor select,
-.propertyEditor font-propertyeditor select {
+.propertyEditor gameeditor-textfieldpropertyeditor select,
+.propertyEditor gameeditor-textareapropertyeditor select,
+.propertyEditor gameeditor-checkboxpropertyeditor select,
+.propertyEditor gameeditor-animationpropertyeditor select,
+.propertyEditor gameeditor-colorpropertyeditor select,
+.propertyEditor gameeditor-twofieldpropertyeditor select,
+.propertyEditor gameeditor-selectpropertyeditor select,
+.propertyEditor gameeditor-fontpropertyeditor select {
   flex-grow: 10;
 }
 .objectTree {
@@ -382,4 +382,8 @@ button:hover {
   -webkit-appearance: none;
   z-index: 99;
   background-color: white;
+}
+canvas {
+  width: 100%;
+  height: 100%;
 }
