--- a/gameengine-editor/src/main/webapp/css/style.less
+++ b/gameengine-editor/src/main/webapp/css/style.less
@@ -200,3 +200,28 @@ button:hover {
     background-color: white;
   }
 }
+
+// Don't know why but without native webcomponent support
+// we are getting into trouble with dynamically created plain html elements
+// and their styles not correctly resolved within their polymer style module
+.tabpanebuttons {
+  flex-direction: row;
+  display: flex;
+  line-height: 1.45em;
+  background-color: #e74c3c;
+}
+
+.tabpanebutton {
+  color: white;
+  margin-left: 1em;
+  padding: 0.2em;
+  background-color: #e74c3c;
+}
+
+.tabpanebutton:hover {
+  background-color: #4a5058;
+}
+
+.selected {
+  background-color: #4a5058;
+}
