--- a/gameengine-editor/src/main/webapp/css/style.less
+++ b/gameengine-editor/src/main/webapp/css/style.less
@@ -101,6 +101,17 @@ body {
   overflow-x: hidden;
 }
 
+.genericdeletebutton {
+  vertical-align: middle;
+  content: url("../webcomponents/gameeditor-treeitem/close.png");
+}
+
+.genericdeletebutton:after {
+  content: url("../webcomponents/gameeditor-treeitem/close.png");
+  width: 18px;
+  height: 18px;
+}
+
 // Don't know why but without native webcomponent support
 // we are getting into trouble with dynamically created plain html elements
 // and their styles not correctly resolved within their polymer style module
@@ -119,5 +130,20 @@ body {
 }
 
 .tabpanebutton:hover {
+  background-color: #4a5058;
+}
+
+.closebutton {
+  vertical-align: middle;
+  content: url("../webcomponents/gameeditor-treeitem/close.png");
+}
+
+.closebutton:after {
+  width: 18px;
+  height: 18px;
+  content: url("../webcomponents/gameeditor-treeitem/close.png");
+}
+
+.selected {
   background-color: #4a5058;
 }
