--- a/gameengine-editor/src/main/webapp/css/welcome.less
+++ b/gameengine-editor/src/main/webapp/css/welcome.less
@@ -21,8 +21,8 @@ body {
     margin-bottom: 2em;
     padding: 1em;
     background-color: #e74c3c;
-    border: 1px solid black;
     color: white;
+    border: 1px solid white;
   }
 
   .contentblocks {
@@ -46,7 +46,7 @@ body {
 .infoblock {
 
   flex-grow: 1;
-  border: 1px solid black;
+  border: 1px solid white;
   background-color: white;
 
   .title {
@@ -59,6 +59,7 @@ body {
   .infoblockcontent {
     background-color: white;
     text-align: left;
+    margin: 0.1em;
 
     .entry {
       background-color: white;
